[package]
name = "t2e"
version = "0.1.0"
authors = ["Ogrish Man <ogrishman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard = "0.5.0"
quick-xml = "0.17.2"
clap = "2.33.0"

# Logging support
log = "0.4"
pretty_env_logger = "0.3.1"
